# MegaLeaf

./: .gitignore  .gitmodules  LICENSE  README.md
MLF_Proto_Lib/: CMakeLists.txt  MLFProtoLib.cpp  MLFProtoLib.h  MLFProtoLib.hpp  MLFProtoLib.py  README.md
STM32_Controller/: .cproject  .mxproject  .project  MegaLeaf_Controller.ioc
STM32_Controller/App/Inc/: app.h  mlf_effects.h  mlf_protocol.h  ws2812.h
STM32_Controller/App/Src/: app.c  mlf_effects.c  mlf_protocol.c  ws2812b.c
STM32_Controller/Core/Inc/: logger.h  main.h  panic.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  stm32l5xx_hal_conf.h  stm32l5xx_it.h
STM32_Controller/Core/Src/: boot_setup.c  main.c  panic.S  stm32f4xx_it.c  stm32l5xx_hal_msp.c  stm32l5xx_it.c  syscalls.c
STM32_Controller/Release/: MegaLeaf_STM32F4.elf  MegaLeaf_STM32F4.list  MegaLeaf_STM32F4.map  makefile  objects.list  objects.mk  sources.mk
STM32_Controller/USB_Device/App/: usb_device.c  usb_device.h  usbd_cdc_if.c  usbd_desc.c  (+2 more)
board/: MegaLeafPCB.kicad_pcb  MegaLeafPCB.kicad_prl  MegaLeafPCB.kicad_pro  MegaLeafPCB.kicad_sch  README.md  power_led_strips.kicad_sch
esperif/: Makefile
esperif/cloud-device/: capability_effect_speed.json  en_effect_speed.json  pl_effect_speed.json  presentation_effect_speed.json
esperif/main/: CMakeLists.txt  component.mk  main.cpp
esperif/main/capabilities/: caps_base.hpp  caps_color.hpp  caps_colorEffect.hpp  caps_colorEffectSpeed.cpp  caps_colorEffectSpeed.hpp  caps_switch.cpp  caps_switch.hpp
esperif/main/cfg/: Readme.txt
esperif/main/comm/: mlf_comm.h  mlf_protocol.c
lib/: MLFProtoLib.cpp  MLFProtoLib.h  MLFProtoLib.hpp  MLFProtoLib.py  README.md
lib/uapi/: mlf_protocol_uapi.h
mcu_esperif/: CMakeLists.txt  README.md  sdkconfig
mcu_esperif/cloud-device/: capability_effect.json  en_effect.json  pl_effect.json  presentation_effect.json
mcu_esperif/main/: CMakeLists.txt  idf_component.yml  main.cpp  stdkconfig.cmake
mcu_esperif/main/capabilities/: caps_base.cpp  caps_color.cpp  caps_colorEffect.cpp  caps_switchLevel.cpp  caps_switchLevel.hpp
mcu_esperif/main/comm/: mlf_comm.c  mlf_protocol.c  mlf_protocol.h
mcu_stm32/: .mxproject  MegaLeaf_STM32F4.ioc
win_ambilight/: AmbiLights.cpp  AmbiLights.hpp  AmbiLights.vcxproj  ArgsParsing.cpp  ArgsParsing.hpp  ComputeRowsAvgColors.hlsl  DDUPAPITest.vcxproj  DDUPAPITest.vcxproj.filters  DesktopDuplication.cpp  DesktopDuplicationAPI.h  README.md  main.cpp
(+78 files in other folders)
